<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".presentation.ui.QrRollChoiceActivity">

    <EditText
        android:id="@+id/etRollNumber"
        android:layout_width="300dp"
        android:layout_height="58dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="Roll Number"
        android:background="@drawable/but_background"
        android:elevation="8dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/roll_number"
        android:inputType="number"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/btnGetStatus"
        android:layout_width="168dp"
        android:layout_height="51dp"
        android:background="@drawable/but_background"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/get_status"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnQRScanner"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/but_background"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/try_qr_scanner_instead"
        android:textAllCaps="false"
        android:textSize="16sp" />
</LinearLayout>
